--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Рассписание</h1>
-    <a href="/timetable/расписание.pdf" download> Скачать</a>
+    <a href="timetable/расписание.pdf" download> Скачать</a>
 </body>
 </html>
